fixed overflow in nametag box

--- a/snippets/reclaimthemessagebox.css
+++ b/snippets/reclaimthemessagebox.css
@@ -35,7 +35,7 @@ button[aria-label="Open sticker picker"] {
   transition: all 0.2s ease-in-out;
 }
 
-.panels-3wFtMD>.container-YkUktl .nameTag-sc-gpq .defaultColor-1EVLSt .title-338goq {
+.panels-3wFtMD>.container-YkUktl .nameTag-sc-gpq .title-338goq {
   overflow: visible;
 }
 
